fix spacing to make room for subheading

--- a/app/assets/stylesheets/widgets/home_page/hero_panel_masthead.scss
+++ b/app/assets/stylesheets/widgets/home_page/hero_panel_masthead.scss
@@ -73,7 +73,7 @@
     .homepage-masthead__buttons-inspire {
       width: 380px;
       position: absolute;
-      top: 42%;
+      top: 45%;
       left: 15%;
 
       .button-link-inspire {
@@ -161,7 +161,6 @@
 
   video.homepage-masthead__video,
   video#homepage-masthead__video {
-    // max-height: 90vh;
     mask-image: none !important;
   }
 }
@@ -172,25 +171,13 @@
   .homepage-masthead__container {
     .homepage-masthead__sub-container {
       .homepage-masthead__heading-container {
-        // margin-top: 0;
-        // position: relative;
-        // top: 0;
-        // left: 10%;
 
         .masthead-triangle {
-          // border-top: 125px solid transparent;
-          // border-right: 125px solid rgba(0, 156, 166, 0.8);
-          // border-bottom: 125px solid transparent;
-          // position: relative;
-          // top: 55px;
           left: 9%;
-          // transform: rotate(45deg);
         }
 
         .homepage-masthead__tagline {
-          // top: -105px;
           left: 13%;
-          // bottom: 0;
 
           .row-one,
           .row-two,
@@ -209,11 +196,15 @@
             font-size: 7.6rem;
             line-height: 7.6rem;
           }
+          .row-three {
+            font-size: 3.6rem;
+            line-height: 3.6rem;
+          }
         }
       }
 
       .homepage-masthead__buttons-inspire {
-        top: 38%;
+        top: 41%;
         left: 12%;
 
         width: 340px;
@@ -303,9 +294,6 @@
 
     .homepage-masthead__sub-container {
       .homepage-masthead__heading-container {
-        // margin-top: 0;
-        // position: relative;
-        // top: 10%;
 
         .masthead-triangle {
           left: -1%;
@@ -347,7 +335,6 @@
       }
 
       .homepage-masthead__buttons-inspire {
-        // align-items: center;
         width: 90%;
         left: 5%;
         .button-link-inspire {
